service-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:

              - match:
                  prefix: "/noretry"
                route:
                  cluster: local_service

              - match:
                  prefix: "/"
                route:
                  cluster: local_service
                  retry_policy:
                    retry_on: "5xx"
                    num_retries: 3

          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"

  clusters:
  - name: local_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    circuit_breakers:
      thresholds:
        max_retries: 3  # default 3
        # max_connections: 1024
        # max_requests: 1024
        # retry_budget:
        #   budget_percent: 20
        #   min_retry_concurrency: 3
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service1
                port_value: 8080
        - endpoint:
            address:
              socket_address:
                address: service2
                port_value: 8080
        - endpoint:
            address:
              socket_address:
                address: service3
                port_value: 8080

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
